--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "moment": "2.10.3",
     "ng-lodash": "0.2.3",
     "qrcode-decoder-js": "*",
-    "trezor-connect": "*",
+    "trezor-connect": "v3",
     "ng-csv": "~0.3.6"
   },
   "resolutions": {
